--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
   },
   "dependencies": {
     "@chainsafe/libp2p-noise": "^5.0.0",
+    "it-buffer": "^0.1.3",
+    "it-pipe": "^1.1.0",
     "libp2p": "^0.35.7",
     "libp2p-bootstrap": "^0.14.0",
+    "libp2p-crypto": "^0.21.0",
     "libp2p-mplex": "^0.10.5",
     "libp2p-webrtc-star": "^0.25.0",
     "libp2p-websockets": "^0.16.2",
     "lodash-es": "^4.17.21",
-    "peer-id": "^0.16.0"
+    "peer-id": "^0.16.0",
+    "streaming-iterables": "^6.0.0"
   },
   "source": "src/index.html"
 }
