--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "clean": "prettier -w {cfg,test,src,static}/**/*.{js,scss,css,html}",
-    "serve": "parcel build",
+    "build": "parcel build",
     "start": "parcel"
   },
   "devDependencies": {
@@ -17,6 +17,7 @@
   "dependencies": {
     "@chainsafe/libp2p-noise": "^5.0.0",
     "it-buffer": "^0.1.3",
+    "it-length-prefixed": "^5.0.3",
     "it-pipe": "^1.1.0",
     "libp2p": "^0.35.7",
     "libp2p-bootstrap": "^0.14.0",
