--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "browser": true,
   "private": true,
   "scripts": {
-    "clean": "prettier -w {cfg,test,src,static}/**/*.{js,scss,css,html}",
+    "clean": "prettier -w {cfg,test,src,static}/**/*.{js,jsx,ts,scss,css,html}",
     "build": "parcel build",
     "start": "parcel"
   },
@@ -16,6 +16,9 @@
   },
   "dependencies": {
     "@chainsafe/libp2p-noise": "^5.0.0",
+    "@popperjs/core": "^2.11.0",
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.2",
     "it-buffer": "^0.1.3",
     "it-length-prefixed": "^5.0.3",
     "it-pipe": "^1.1.0",
@@ -27,6 +30,8 @@
     "libp2p-websockets": "^0.16.2",
     "lodash-es": "^4.17.21",
     "peer-id": "^0.16.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "streaming-iterables": "^6.0.0"
   },
   "source": "src/index.html"
