--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@popperjs/core": "^2.11.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
+    "idb": "^7.0.0",
     "it-buffer": "^0.1.3",
     "it-length-prefixed": "^5.0.3",
     "it-pipe": "^1.1.0",
