--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "browser": true,
   "private": true,
   "scripts": {
-    "clean": "prettier -w {cfg,test,src,static}/**/*.{js,jsx,ts,scss,css,html}",
+    "clean": "prettier -w {cfg,test,src,static}/**/*.{js,jsx,ts,tsx,scss,css,html}",
     "build": "parcel build",
     "start": "parcel"
   },
@@ -30,6 +30,7 @@
     "libp2p-webrtc-star": "^0.25.0",
     "libp2p-websockets": "^0.16.2",
     "lodash-es": "^4.17.21",
+    "multiformats": "^9.5.4",
     "peer-id": "^0.16.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
