--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "dependencies": {
     "@chainsafe/libp2p-noise": "^5.0.0",
     "@popperjs/core": "^2.11.0",
+    "base58-universal": "^1.0.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
     "idb": "^7.0.0",
     "it-buffer": "^0.1.3",
     "it-length-prefixed": "^5.0.3",
     "it-pipe": "^1.1.0",
+    "jsonld": "^5.2.0",
     "libp2p": "^0.35.7",
     "libp2p-bootstrap": "^0.14.0",
     "libp2p-crypto": "^0.21.0",
