--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
   "scripts": {
     "clean": "prettier -w {cfg,test,src,static}/**/*.{js,jsx,ts,tsx,scss,css,html}",
     "build": "parcel build",
-    "start": "parcel"
+    "start": "parcel serve",
+    "test": "jest"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.0.1",
+    "@parcel/transformer-sass": "^2.1.1",
     "parcel": "^2.0.1",
     "prettier": "^2.5.1"
   },
   "dependencies": {
     "@chainsafe/libp2p-noise": "^5.0.0",
     "@popperjs/core": "^2.11.0",
-    "base58-universal": "^1.0.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
     "idb": "^7.0.0",
