--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.1.1",
+    "@trivago/prettier-plugin-sort-imports": "^3.1.1",
     "parcel": "^2.0.1",
     "prettier": "^2.5.1"
   },
   "dependencies": {
     "@chainsafe/libp2p-noise": "^5.0.0",
     "@popperjs/core": "^2.11.0",
+    "@types/lodash": "^4.14.178",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
     "idb": "^7.0.0",
@@ -28,16 +30,24 @@
     "libp2p": "^0.35.7",
     "libp2p-bootstrap": "^0.14.0",
     "libp2p-crypto": "^0.21.0",
+    "libp2p-gossipsub": "^0.12.1",
+    "libp2p-kad-dht": "^0.28.1",
     "libp2p-mplex": "^0.10.5",
     "libp2p-webrtc-star": "^0.25.0",
     "libp2p-websockets": "^0.16.2",
-    "lodash-es": "^4.17.21",
+    "lodash": "^4.17.21",
     "multiformats": "^9.5.4",
     "peer-id": "^0.16.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "streaming-iterables": "^6.0.0",
-    "uint8arrays": "^3.0.0"
+    "streaming-iterables": "^6.0.0"
   },
-  "source": "src/index.html"
+  "source": "src/index.html",
+  "prettier": {
+    "importOrder": [
+      "^[./]"
+    ],
+    "importOrderSeparation": true,
+    "importOrderSortSpecifiers": true
+  }
 }
