--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "clean": "prettier -w {cfg,test,src,static}/**/*.{js,jsx,ts,tsx,scss,css,html}",
-    "build": "parcel build",
+    "build": "rm -rf dist/ && parcel build && cp -a dist docs",
     "start": "parcel serve",
     "test": "jest"
   },
@@ -18,8 +18,8 @@
   },
   "dependencies": {
     "@chainsafe/libp2p-noise": "^5.0.0",
-    "@popperjs/core": "^2.11.0",
     "@types/lodash": "^4.14.178",
+    "abort-controller": "^3.0.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
     "idb": "^7.0.0",
@@ -39,7 +39,9 @@
     "multiformats": "^9.5.4",
     "peer-id": "^0.16.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
+    "react-qr-code": "^2.0.3",
     "streaming-iterables": "^6.0.0"
   },
   "source": "src/index.html",
