--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "clean": "prettier -w {cfg,test,src,static}/**/*.{js,jsx,ts,tsx,scss,css,html}",
-    "build": "rm -rf dist/ && parcel build && cp -a dist docs",
+    "build": "rm -rf dist/ docs/ && parcel build --public-url ./ && cp -a dist docs",
     "start": "parcel serve",
     "test": "jest"
   },
